--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# Configuration de la base de données
+spring.datasource.url=jdbc:h2:mem:bananaExportDataBase
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=BananaExport123
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
